--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -2,7 +2,7 @@
 <h1>It's My Birthday!</h1>
 <h2>On the 7th March</h2>
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
+<img src="./birthday2.jpg"
   alt="purple birthday cake with candles" />
 
 <h3>What to bring:</h3>
